Add basic websocket ops
Signed-off-by: Ricky Elrod <ricky@elrod.me>

--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
     </div>
     <div id="announcement" class="yay">
       <span id="announcement_text">
-        <strong>Chase team</strong>: Welcome to mapview 2.0!
+        Welcome to mapview 2.0! Announcements will appear here in real-time.
       </span>
       <button id="dismiss_announcement" class="button-secondary pure-button button-xsmall">Close</button>
     </div>
