Add back in the date update id
Signed-off-by: Ricky Elrod <ricky@elrod.me>

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
             </div>
           </form>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Last update: Unknown</a></li>
+            <li><a href="#">Last update: <span id="lastupdate"></span></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
