--- a/html/index.html
+++ b/html/index.html
@@ -41,6 +41,7 @@
             </div>
           </form>
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Look angle: <span id="lookangle"></span></a></li>
             <li><a href="#">Last update: <span id="lastupdate"></span></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
