--- a/html/index.html
+++ b/html/index.html
@@ -35,9 +35,9 @@
         <div class="collapse navbar-collapse" id="collapse">
           <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Latitude">
-              <input type="text" class="form-control" placeholder="Your Longitude">
-              <input type="text" class="form-control" placeholder="Your elevation (ft)">
+              <input id="f_lat" type="text" class="form-control" placeholder="Your Latitude">
+              <input id="f_lon" type="text" class="form-control" placeholder="Your Longitude">
+              <input id="f_alt" type="text" class="form-control" placeholder="Your elevation (meters)">
             </div>
           </form>
           <ul class="nav navbar-nav navbar-right">
