Fix update time, add temperature
Signed-off-by: Ricky Elrod <ricky@elrod.me>

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
     <!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js"></script>
-        <![endif]-->
+    <![endif]-->
   </head>
   <body>
     <nav class="navbar navbar-default mv-navbar" role="navigation">
@@ -43,6 +43,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Look angle: <span id="lookangle"></span></a></li>
             <li><a href="#">Last update: <span id="lastupdate"></span></a></li>
+            <li><a href="#">Temp: <span id="temperature"></span></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
