Show altitude and update lookangle on gpsd coordinate too
Signed-off-by: Ricky Elrod <ricky@elrod.me>

--- a/html/index.html
+++ b/html/index.html
@@ -44,6 +44,7 @@
           </form>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Look angle: <span id="lookangle"></span></a></li>
+            <li><a href="#">Alt: <span id="balloon_altitude"></span>m</a></li>
             <li><a href="#">Last update: <span id="lastupdate"></span></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
