this is a hacky pile of crap and needs to be rewritten with modern psc
Signed-off-by: Ricky Elrod <ricky@elrod.me>

--- a/html/index.html
+++ b/html/index.html
@@ -42,8 +42,11 @@
               <input id="f_alt" type="text" class="form-control" placeholder="Your elevation (meters)">
             </div>
           </form>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-left">
             <li><a href="#">Look angle: <span id="lookangle"></span></a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Voltage: <span id="balloon_voltage">--</span>V</a></li>
             <li><a href="#">Alt: <span id="balloon_altitude"></span>m</a></li>
             <li><a href="#">Last update: <span id="lastupdate"></span></a></li>
           </ul>
